[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/Level_Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/Investigate_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Gameplay_Levels/Level_Gameplay.gd" type="Script" id=4]
[ext_resource path="res://Card_Traits/Card_Base.tscn" type="PackedScene" id=5]
[ext_resource path="res://Card_Traits/Card_Vocabulary.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/AlbertText-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[node name="Level_Gameplay" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Level_Text" parent="CanvasLayer2" index="0"]
margin_top = 730.0
margin_bottom = 800.0

[node name="Investigation_Result_1" type="RichTextLabel" parent="CanvasLayer2" index="1"]
margin_left = 10.0
margin_top = 810.0
margin_right = 1920.0
margin_bottom = 880.0
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Investigation_Result_2" type="RichTextLabel" parent="CanvasLayer2" index="2"]
margin_left = 10.0
margin_top = 890.0
margin_right = 1920.0
margin_bottom = 960.0
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Investigate_Button_0" parent="CanvasLayer2" index="3" instance=ExtResource( 3 )]
margin_left = 10.0
margin_right = 210.0

[node name="Investigate_Button_1" parent="CanvasLayer2" index="4" instance=ExtResource( 3 )]
margin_left = 230.0
margin_right = 430.0
rect_scale = Vector2( 1, 0.985324 )

[node name="Investigate_Button_2" parent="CanvasLayer2" index="5" instance=ExtResource( 3 )]
margin_left = 450.0
margin_right = 650.0

[node name="Investigate_Button_3" parent="CanvasLayer2" index="6" instance=ExtResource( 3 )]
margin_left = 670.0
margin_right = 870.0

[node name="Investigate_Button_4" parent="CanvasLayer2" index="7" instance=ExtResource( 3 )]
margin_left = 890.0
margin_right = 1090.0

[node name="Investigate_Button_5" parent="CanvasLayer2" index="8" instance=ExtResource( 3 )]
margin_left = 1110.0
margin_right = 1310.0

[node name="Card_0" parent="." index="2" instance=ExtResource( 5 )]

[node name="Card_1" parent="." index="3" instance=ExtResource( 5 )]

[node name="Card_2" parent="." index="4" instance=ExtResource( 5 )]

[node name="Card_3" parent="." index="5" instance=ExtResource( 5 )]

[node name="Card_4" parent="." index="6" instance=ExtResource( 5 )]

[node name="Card_5" parent="." index="7" instance=ExtResource( 5 )]

[node name="Card_Type_Information" parent="." index="8" instance=ExtResource( 6 )]
